--- a/food-showcase/src/index.css
+++ b/food-showcase/src/index.css
@@ -1,1 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
 @import "tailwindcss";
+
+@theme {
+  --font-primary: "Titillium Web", sans-serif;
+  --color-darkest: #18191A;
+  --color-darker: #242526;
+  --color-dark: #3A3B3C;
+  --color-light: #EEEEEE;
+  --color-lighter: #B3B3B3;
+  --color-mustard: #FFD700;
+  
+}
